--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-code-layout",
-  "version": "1.0.12",
+  "version": "1.1.1",
   "description": "Changes the layout of typescript files.",
   "main": "main.js",
   "type": "module",
@@ -35,6 +35,8 @@
     ]
   },
   "dependencies": {
+    "command-line-args": "^5.2.1",
+    "command-line-usage": "^7.0.1",
     "ts-morph": "^19.0.0"
   }
 }
