--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "ts-code-layout",
-  "version": "1.1.2,
+  "version": "1.1.3,
   "description": "Changes the layout of typescript files.",
   "main": "main.js",
   "type": "module",
   "author": {
-    "name": ""
+    "name": "Christian Pirmayr"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Pirmayr/ts-code-layout.git"
   },
   "bin": {
     "ts-code-layout": "main.js"
