--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-code-layout",
-  "version": "1.1.3,
+  "version": "1.1.6",
   "description": "Changes the layout of typescript files.",
   "main": "main.js",
   "type": "module",
