--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@types/node": "^14.18.54",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "ajv": "^8.12.0",
+    "command-line-usage": "^7.0.1",
     "eslint": "^8.47.0",
     "rexreplace": "^7.1.3",
     "typescript": "^4.9.5"
@@ -41,7 +43,6 @@
   },
   "dependencies": {
     "command-line-args": "^5.2.1",
-    "command-line-usage": "^7.0.1",
     "ts-morph": "^19.0.0"
   }
 }
